--- a/MyDiary/app/src/main/res/values/strings.xml
+++ b/MyDiary/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="access_token">pk.eyJ1IjoiZmFudDRzMXN0YSIsImEiOiJja3VtbmxteTExZmhlMndvNmw0em40aW1iIn0.ULsRmgGa0SPu6Uw0UwVBgg</string>
 </resources>
