--- a/MyDiary/app/src/main/res/values/strings.xml
+++ b/MyDiary/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="access_token">pk.eyJ1IjoiZmFudDRzMXN0YSIsImEiOiJja3VtbmxteTExZmhlMndvNmw0em40aW1iIn0.ULsRmgGa0SPu6Uw0UwVBgg</string>
+    <string name="start_navigation">Start Navigation</string>
 </resources>
